@@ -33,7 +33,7 @@ use Cwd;
 our %build_reqs = (
 	'perl-ExtUtils-Depends'   => '0.300',
 	'perl-ExtUtils-PkgConfig' => '1.030',
-	'perl-Glib'               => '1.240',
+	'perl-Glib'               => '1.280',
 	'perl-Pango'              => '1.220',
 	'perl-Cairo'              => '1.000',
 	'Gtk+'                    => '2.0.0',
