@@ -61,7 +61,7 @@ DEPENDENCIES
 This module requires these other modules and libraries:
 
   perl >= 5.8.0
-  Glib >= 1.240 (Perl module)
+  Glib >= 1.280 (Perl module)
   Pango >= 1.220 (Perl module)
   GTK+ > 2.x (C library)
 
